--- a/site/src/main/webapp/resources/css/docs.css
+++ b/site/src/main/webapp/resources/css/docs.css
@@ -34,6 +34,15 @@ body {
     margin-top: 1rem;
 }
 
+@media only screen and (min-width: 75em) {
+    #left-menu-container .menu-bar > li > a {
+        padding: 0.8rem 1rem;
+    }
+    #left-menu .title {
+        margin-top: 0;
+    }
+}
+
 #left-menu {
     /*background: #f9f9f9;*/
     padding-bottom: 2rem;
@@ -41,6 +50,15 @@ body {
 
 #main-container {
     padding: 0 !important;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+    flex-direction: column;
+    overflow-y: scroll;
+    max-height: calc(100vh - 54px);
 }
 
 :not(pre) > code[class*="language-"], pre[class*="language-"] {
