--- a/tornadofaces/src/themes/tornado/scss/nouislider.scss
+++ b/tornadofaces/src/themes/tornado/scss/nouislider.scss
@@ -10,142 +10,120 @@
   user-select: none;
 	box-sizing: border-box;
 }
+
+.slider-header {
+  position: relative;
+  text-align: center;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0.8em;
+    z-index: 0;
+    width: 100%;
+    border-top: 1px dotted #464646;
+  }
+  &> h4 {
+    font-size: 1rem;
+    display: inline-block;
+    background: #fff;
+    padding: 0 1rem;
+    margin-bottom: 0;
+    position: relative;
+    z-index: 1;
+  }
+}
+.slider-min,
+.slider-max {
+  position: absolute;
+  top: 0.4em;;
+  background: #fff;
+  z-index: 1;
+}
+.slider-min { left: 0; padding-right: 1rem; }
+.slider-max { right: 0; padding-left: 1rem; }
+
+.slider {
+  position: relative;
+  user-select: none;
+  width: 100%;
+}
 .noUi-target {
 	position: relative;
 	direction: ltr;
-}
-.noUi-base {
-	width: 100%;
-	height: 100%;
-	position: relative;
-}
-.noUi-origin {
-	position: absolute;
-	right: 0;
-	top: 0;
-	left: 0;
-	bottom: 0;
-}
-.noUi-handle {
-	position: relative;
-	z-index: 1;
-}
-.noUi-stacking .noUi-handle {
-/* This class is applied to the lower origin when
-   its values is > 50%. */
-	z-index: 10;
-}
-.noUi-stacking + .noUi-origin {
-/* Fix stacking order in IE7, which incorrectly
-   creates a new context for the origins. */
-	*z-index: -1;
-}
-.noUi-state-tap .noUi-origin {
-	transition: left 0.3s, top 0.3s;
-}
-.noUi-state-drag * {
-	cursor: inherit !important;
-}
-
-/* Painting and performance;
- * Browsers can paint handles in their own layer.
- */
-.noUi-base {
-	transform: translate3d(0,0,0);
-}
-
-/* Slider size and handle placement;
- */
-.noUi-horizontal {
-	height: 18px;
-}
-.noUi-horizontal .noUi-handle {
-	width: 34px;
-	height: 28px;
-	left: -17px;
-	top: -6px;
-}
-.noUi-vertical {
-	width: 18px;
-}
-.noUi-vertical .noUi-handle {
-	width: 28px;
-	height: 34px;
-	left: -6px;
-	top: -17px;
-}
-
-/* Styling;
- */
-.noUi-background {
-	background: #FAFAFA;
-	box-shadow: inset 0 1px 1px #f0f0f0;
+  height: 2px;
+  background: $dark-color;
 }
 .noUi-connect {
-	background: $primary-color;
-	box-shadow: inset 0 0 3px rgba(51,51,51,0.45);
-	transition: background 450ms;
+  background: $primary-color;
+}
+.noUi-background {
+  background: $dark-color;
+}
+.noUi-base {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  &:after {
+    content: "";
+    cursor: pointer;
+    display: block;
+    height: 32px;
+    position: absolute; top: -15px; z-index: 100;
+    width: 100%;
+  }
 }
 .noUi-origin {
-	border-radius: 2px;
-}
-.noUi-target {
-	border-radius: 4px;
-	border: 1px solid #D3D3D3;
-	box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
-}
-.noUi-target.noUi-connect {
-	box-shadow: inset 0 0 3px rgba(51,51,51,0.45), 0 3px 6px -5px #BBB;
-}
-
-/* Handles and cursors;
- */
-.noUi-dragable {
-	cursor: w-resize;
-}
-.noUi-vertical .noUi-dragable {
-	cursor: n-resize;
+  height: 100%;
+  position: absolute; right: 0;
 }
 .noUi-handle {
-	border: 1px solid #D9D9D9;
-	border-radius: 3px;
-	background: #FFF;
-	cursor: default;
-	box-shadow: inset 0 0 1px #FFF,
-				inset 0 1px 7px #EBEBEB,
-				0 3px 6px -3px #BBB;
-}
-.noUi-active {
-	box-shadow: inset 0 0 1px #FFF,
-				inset 0 1px 7px #DDD,
-				0 3px 6px -3px #BBB;
-}
+  background: $primary-color;
+  border: 1px solid $primary-color;
+  position: absolute;
+  top: -9px;
+  left: -10px;
+  z-index: 120;
+  cursor: pointer;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
 
-/* Handle stripes;
- */
-.noUi-handle:before,
-.noUi-handle:after {
-	content: "";
-	display: block;
-	position: absolute;
-	height: 14px;
-	width: 1px;
-	background: #E8E7E6;
-	left: 14px;
-	top: 6px;
-}
-.noUi-handle:after {
-	left: 17px;
-}
-.noUi-vertical .noUi-handle:before,
-.noUi-vertical .noUi-handle:after {
-	width: 14px;
-	height: 1px;
-	left: 6px;
-	top: 14px;
-}
-.noUi-vertical .noUi-handle:after {
-	top: 17px;
+  &:hover,
+  &.noUi-active {
+    background: #fff;
+    color: #fff;
+  }
+
+  &:before,
+  &:after {
+    position: absolute;
+  }
+
+  &:before {
+//    content: '\e63b \e63a';
+    letter-spacing: 3px;
+    box-sizing: border-box;
+    font-family: icomoon;
+    font-size: 10px;
+    width: 100%;
+    text-align: center;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    align-items: center;
+    display: inline-flex;
+    padding-left: 5.7px;
+    vertical-align: middle;
+    height: 100%;
+  }
+  &:after {
+    background: none;
+    content: "";
+    display: block;
+    height: 160%;
+    top: -30%; left: -30%;
+    width: 160%;
+  }
 }
 
 /* Disabled state;
