--- a/tornadofaces/src/themes/tornado/scss/_settings.scss
+++ b/tornadofaces/src/themes/tornado/scss/_settings.scss
@@ -108,7 +108,7 @@ $primary-color: #3fa2d8;
 // $info-color: #A0D3E8;
 // $success-color: #43AC6A;
 // $warning-color: #F08A24;
-$dark-color: #353e3e;
+$dark-color: #181818;
 $gray: #cbcbcb;
 $gray-dark: darken($gray, 10);
 $gray-light: lighten($gray, 10);
