--- a/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
+++ b/tornadofaces/src/themes/tornado/scss/tornadofaces.scss
@@ -20,8 +20,6 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-//  margin-bottom: 20px;
-  margin: 20px;
 
   border: none;
 
@@ -69,6 +67,7 @@
 #left-menu-container {
   min-width: 220px;
   max-width: 300px;
+  background: $dark-color;
 }
 #left-menu-container.collapsed {
   min-width: 0;
@@ -240,7 +239,10 @@
 }
 
 @include breakpoint(small) {
-  #main-container { padding: 1rem !important; }
+  #main-container {
+    padding: 1rem !important;
+    padding-right: calc(100% - 1200px) !important;
+  }
 
   .menu-group > .menu-group-left {
     flex: 1;
