--- a/tornadofaces/src/themes/tornado/scss/flippanel.scss
+++ b/tornadofaces/src/themes/tornado/scss/flippanel.scss
@@ -2,22 +2,32 @@
 // - - - - - - - - - - - - - - -
 .flip-panel {
   perspective: 1000;
-  flex: 1;
+  position: relative;
+  padding: 0;
 
-  .flip-wrapper {
+  .flip-content {
     position: relative;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
   }
 
   .front, .back {
     backface-visibility: hidden;
+    position: absolute;
     width: 100%;
+    top: 0;
+    left: 0;
+    padding: 1rem;
   }
   .front {
     z-index: 2;
   }
+  &.flipped .flip-content {
+    -webkit-backface-visibility: initial;
+  }
   .back {
     position: absolute; top: 0; left: 0;
-    width: 100%;
-    height: 100%;
+//    transform: matrix3d(-1, 0, 0, 0, 0, 1, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1);
+    transform: rotateY(-180deg);
   }
 }
