--- a/tornadofaces/src/themes/tornado/scss/_global.scss
+++ b/tornadofaces/src/themes/tornado/scss/_global.scss
@@ -45,7 +45,7 @@ $primary-color: #00558b !default;
 $secondary-color: #f1f1f1 !default;
 $alert-color: #E46E5B !default;
 $info-color: #A0D3E8 !default;
-$success-color: #7AEF40 !default;
+$success-color: #58DF64 !default;
 $warning-color: #9B9B87 !default;
 $dark-color: #f00 !default;
 $gray: #dfdfdf !default;
